[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resource_monitor"
dynamic = ["version"]
requires-python = ">=3.10"
license = {file = "LICENSE"}
readme = "README.md"
authors = [
    {name = "Daniel Thom", email = "daniel.thom@nrel.gov"},
]
classifiers=[
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "click",
    "connectorx~=0.3.2",
    "plotly",
    "polars~=0.19.7",
    "psutil",
    "pyarrow",
    "pydantic~=2.4.0",
]

[tool.hatch.version]
path = "resource_monitor/__init__.py"

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pre-commit",
    "pylint",
    "pytest",
    "pytest-cov",
]

[project.scripts]
rmon = "resource_monitor.cli.rmon:cli"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = [
    "tests",
]
